--- a/load.tex
+++ b/load.tex
@@ -1,100 +1,66 @@
-\chaplbl{Cognitive Load}{sec:load}{0}{0}
+\chaplbl{Cognitive Load}{sec:load}{20}{20}
 
-In our final topic in educational psychology, we'll be learning more
-about human memory: specifically how to remove unnecessary ``load'' in
-order to facilitate learning.
-
-\seclbl{Battling Theories}{sec:battling-theories}
-
-In 2006, Kirschner, Sweller, and Clark published a paper titled
-``\href{http://www.cogtech.usc.edu/publications/kirschner\_Sweller\_Clark.pdf}{Why
+In 2006, Kirschner, Sweller, and Clark published a paper titled ``Why
 Minimal Guidance During Instruction Does Not Work: An Analysis of the
 Failure of Constructivist, Discovery, Problem-Based, Experiential, and
-Inquiry-Based Teaching}''. In the abstract, they say:
+Inquiry-Based Teaching'' \cite{fixme}. Its abstract says:
 
 \begin{quote}
-Although unguided or minimally guided instructional approaches are very
-popular and intuitively appealing\ldots{}these approaches ignore both
-the structures that constitute human cognitive architecture and evidence
-from empirical studies over the past half-century that consistently
-indicate that minimally guided instruction is less effective and less
-efficient than instructional approaches that place a strong emphasis on
-guidance of the student learning process. The advantage of guidance
-begins to recede only when learners have sufficiently high prior
-knowledge to provide ``internal'' guidance.
+
+  Although unguided or minimally guided instructional approaches are
+  very popular and intuitively appealing\ldots{}these approaches
+  ignore both the structures that constitute human cognitive
+  architecture and evidence from empirical studies over the past
+  half-century that consistently indicate that minimally guided
+  instruction is less effective and less efficient than instructional
+  approaches that place a strong emphasis on guidance of the student
+  learning process. The advantage of guidance begins to recede only
+  when learners have sufficiently high prior knowledge to provide
+  ``internal'' guidance.
+
 \end{quote}
 
 The paper set off a minor academic firestorm, because beneath the jargon
 the authors were claiming that
 \href{https://en.wikipedia.org/wiki/Inquiry-based\_learning}{inquiry-based
-learning}---allowing learners to ask their own questions, set their own
-goals, and find their own path through a subject---doesn't actually work
-very well. Kirschner et al's argument was that it requires learners to
-simultaneously master a domain's factual content and its search and
-problem-solving strategies. Fostering creativity and independence is
-intuitively appealing, but that doesn't mean it works.
+learning}---allowing learners to ask their own questions, set their
+own goals, and find their own path through a subject---is intuitively
+appealing, but doesn't actually work very well. Kirschner et al argued
+that this was because it requires learners to simultaneously master
+both a domain's factual content and its problem-solving strategies.
 
-One of the paper's authors (Sweller) proposed an alternative based on
-the theory of
-\emph{\href{https://en.wikipedia.org/wiki/Cognitive\_load}{cognitive
-load}}. It posits that people have to deal with three things when
-they're learning:
+More specifically, the theory of
+\emph{\href{https://en.wikipedia.org/wiki/Cognitive\_load}{cognitive load}}
+posits that people have to deal with three things when they're
+learning:
 
 \begin{itemize}
+
 \item
-  \emph{Intrinsic} load is what they have to keep in mind in order to
+  \emph{Intrinsic} load is what people have to keep in mind in order to
   carry out a learning task.
+
 \item
   \emph{Germane} load is the (desirable) mental effort required to
   create linkages between new information and old (which is one of the
   things that distinguishes learning from memorization).
+
 \item
   \emph{Extraneous} load is everything else that distracts or gets in
   the way.
+
 \end{itemize}
 
-Cognitive load theory's proponents claim that eliminating extraneous
-cognitive load accelerates learning. Unsurprisingly, it too has
-\href{https://edtechdev.wordpress.com/2009/11/16/cognitive-load-theory-failure/}{been
-criticized}, most particularly for being unfalsifiable. Critics of
-cognitive load theory say that since there's no way to tell in advance
-of an experiment whether something is germane or not, any result can be
-justified after the fact by labelling things that hurt performance as
-``extraneous'' and things that don't ``germane''.
-
-However, some predictions \emph{can} be made. One example is work by
-Mayer and colleagues on the
-\emph{\href{https://en.wikipedia.org/wiki/Split\_attention\_effect}{split-attention
-effect}}. Linguistic and visual input are processed by different parts
-of the human brain, and linguistic and visual memories are stored
-separately as well. This means that correlating linguistic, auditory,
-and visual streams of information takes cognitive effort: when someone
-reads something while hearing it spoken aloud, their brain can't help
-but check that it's getting the same information on both channels.
-Learning is therefore more effective when redundant information is
-\emph{not} being presented simultaneously in two different channels. For
-example, people find it harder to learn from a video that has both
-narration and on-screen captions than from one that has either the
-narration or the captions but not both.
-
-\seclbl{Faded Examples}{sec:faded-examples}
-
-According to cognitive load theory, searching for a solution strategy is
-an extra burden on top of applying that strategy. We can therefore
-accelerate learning by giving learners worked examples that show them a
-problem and a detailed step-by-step solution, followed by a series of
-\emph{faded examples}. The first of these presents a nearly-complete use
-of the same problem-solving strategy just demonstrated with a small
-number of blanks for the learner to fill in. The next problem is also of
-the same type, but has more blanks, and so on until the learner is asked
-to solve the entire problem.
-
-Faded examples work because they introduce the problem-solving strategy
-piece by piece. At each step, learners have one new problem to tackle.
-This is less intimidating than a blank screen or a blank sheet of paper.
-It also encourages learners to think about the similarities and
-differences between various approaches, which helps create the linkages
-in the mental model that instructors want them to form.
+According to this theory, searching for a solution strategy is an
+extra burden on top of applying that strategy. We can therefore
+accelerate learning by giving learners worked examples that show them
+a problem and a detailed step-by-step solution, followed by a series
+of \emph{faded examples}. The first of these presents a
+nearly-complete use of the same problem-solving strategy just
+demonstrated, but with a small number of blanks for the learner to
+fill in. The next problem is also of the same type, but has more
+blanks, and so on until the learner is asked to solve the entire
+problem.
 
 For example, someone teaching Python might start by explaining this:
 
@@ -107,6 +73,7 @@ def total_length(words):
     return total
 \end{verbatim}
 
+\noindent
 then ask learners to fill in the blanks in:
 
 \begin{verbatim}
@@ -129,6 +96,7 @@ def concatenate_all(words):
     return result
 \end{verbatim}
 
+\noindent
 and learners would finally be asked to tackle:
 
 \begin{verbatim}
@@ -137,49 +105,99 @@ def acronymize(words):
     ____
 \end{verbatim}
 
+Faded examples work because they introduce the problem-solving
+strategy piece by piece. At each step, learners have one new problem
+to tackle.  This is less intimidating than a blank screen or a blank
+sheet of paper.  It also encourages learners to think about the
+similarities and differences between various approaches, which helps
+create the linkages in the mental model that instructors want them to
+form.
+
 The key to constructing a good faded example is to think about the
-problem-solving strategy or solution pattern that it is meant to teach.
-For example, the series of problems above illustrate the
+problem-solving strategy or solution pattern that it is meant to
+teach.  For example, the series of problems are all examples of the
 \emph{accumulator pattern}, in which the results of processing items
 from a collection are repeatedly added to a single variable in some way
 to create the final result.
 
-\begin{challenge}{Create a Faded Example from a Lesson}{chal:create-a-faded-example-from-a-lesson}
+Cognitive load theory has been criticized as being unfalsifiable
+\cite{fixme}: since there's no way to tell in advance of
+an experiment whether something is germane or not, any result can be
+justified after the fact by labelling things that hurt performance as
+``extraneous'' and things that don't ``germane''.  However, there is
+no argument that faded examples are effective.
 
-The following exercise should be done in groups of 2-3.
+\begin{callout}{Split Attention}{callout:split-attention}
 
-\begin{enumerate}
-\item
-  Pick a block of code from an existing Software or Data Carpentry
-  lesson, or from another lesson you have taught recently.
-\item
-  Replace 2-3 pieces of the code with a blank.
-\item
-  Write a question to test the student's ability to correctly fill in
-  that blank.
-\item
-  Paste your faded example in the Etherpad.
-\end{enumerate}
+Research by Mayer and colleagues on the
+\emph{\href{https://en.wikipedia.org/wiki/Split\_attention\_effect}{split-attention
+effect}} is closely related to cognitive load theory.  Linguistic and
+visual input are processed by different parts of the human brain, and
+linguistic and visual memories are stored separately as well. This
+means that correlating linguistic, auditory, and visual streams of
+information takes cognitive effort: when someone reads something while
+hearing it spoken aloud, their brain can't help but check that it's
+getting the same information on both channels.
+
+Learning is therefore more effective when redundant information is
+\emph{not} being presented simultaneously in two different channels. For
+example, people find it harder to learn from a video that has both
+narration and on-screen captions than from one that has either the
+narration or the captions but not both.
+
+This is also why it's more effective to draw a diagram piece by piece
+while teaching rather than presenting the whole thing at once.  If
+parts of the diagram appear at the same time as things are being said,
+the two will be correlated in the learner's memory, so that pointing
+at part of the diagram will trigger recall of what was being said.
+
+\end{callout}
+
+Another way to use cognitive load theory to construct exercises is
+called a \emph{Parson's Problem}.  If you are teaching someone to
+speak a new language, you could ask them a question, and then give
+them the words they need to answer the question, but in jumbled
+order.  Their task is to put the words in the right order to answer
+the question grammatically, which frees them from having to think
+simultaneously about what to say \emph{and} how to say it.
+
+Similarly, when teaching people to program, you can give them the
+lines of code they need to sovle a problem, and ask them to put them
+in the right order.  This allows them to concentrate on control flow
+and data dependencies, i.e., on what has to happen before what,
+without being distracted by variable naming or trying to remember what
+functions to call.
+
+\begin{challenge}{Create a Faded Example}{chal:create-a-faded-example}
+
+It's very common for programs to count how many things fall into
+different categories: for example, how many times different colors
+appear in an image, or how many times different words appear in a
+paragraph of text.  Create a short example (no more than 10 lines of
+code) that shows people how to do this, and then create a second
+example that solves a similar problem in a similar way, but has a
+couple of blanks for learners to fill in.  How did you decide what to
+fade out?  What would the next example in the series be?
+
 \end{challenge}
 
-\seclbl{Parsons Problems}{sec:parsons-problems}
+\begin{challenge}{Create a Parson's Problem}{chal:parsons-problem}
 
-Another kind of exercise designed to reduce cognitive load is a
-\emph{Parsons Problem}, in which learners are presented with the jumbled
-parts of a solution and asked to put them in order. When learning a
-language, for example, students could be asked to order a set of words
-to create a grammatically correct response to a question. Similarly, our
-learners can be given the lines of code needed to solve a problem and
-asked to arrange them. Learners can then be told that they have all the
-lines they need save one, and so on.
+\begin{enumerate}
 
-Here is a really nice online Parsons Problem interactive tool.
-\href{http://runestoneinteractive.org/LearningAtScale/parsons.html}{Try
-it out!}
+\item
+  Write five or six lines of code that does something useful, jumble
+  them, and ask your partner to put them in order.  If you are using
+  an indentation-based language like Python, do not indent any of the
+  lines; if you are using a curly-brace language like Java, do not
+  include any of the curly braces.
 
-\begin{challenge}{Parsons Problems}{chal:parsons-problems}
+\item
+  Create a second example similar to the first, but include one line
+  of code that isn't needed to solve the problem.  How much harder is
+  it for your partner to put things in order when there's unneeded
+  material getting in the way?
 
-Write 5 or 6 lines of code that does something useful, jumble them, then
-add one more line that looks plausible but isn't needed to solve the
-problem. How well can your partner tell which line is unnecessary?
+\end{enumerate}
+
 \end{challenge}
