--- a/lessons.tex
+++ b/lessons.tex
@@ -1,16 +1,135 @@
 \chaplbl{Lessons}{sec:lessons}{0}{0}
 
-So far, we've spent a lot of time talking about details of teaching and
-learning.
-Yesterday we talked about specific teaching tools and how
-people learn; today we've talked about Software Carpentry and Data
-Carpentry teaching more specifically.
-So to wrap up the training, we're
-going to go back and look a bit more at lessons - the actual content
-that you will be preparing and teaching as a Software/Data Carpentry
-instructor. This will two forms: we'll talk about lesson design
-generally, and about the Software and Data Carpentry lessons in
-particular.
+To wrap up this section, we will combine the things we have learned
+with a few more ideas to create a reliable, repeatable process for
+creating and improving lessons.
+
+Most people design lessons as follows:
+
+\begin{enumerate}
+
+\item
+  Someone tells you that you have to teach something you haven't
+  thought about in ten years.
+
+\item
+  You start writing slides to explain what you know about the subject.
+
+\item
+  After two or three weeks, you make up an assignment based more or
+  less on what you've taught so far.
+
+\item
+  You repeat step 3 several times.
+
+\item
+  You stay awake into the wee hours of the morning to create a final
+  exam.
+
+\end{enumerate}
+
+There's a better way, but to explain it, we first need to explain how
+\emph{\href{https://en.wikipedia.org/wiki/Test-driven\_development}{test-driven
+development}} (TDD) is used in software development.  Programmers who
+are using TDD don't write software and then (possibly) write tests.
+Instead, they write the tests first, then write just enough new
+software to make those tests pass, and then clean up a bit.
+
+TDD works because writing tests forces programmers to specify exactly
+what they're trying to accomplish and what ``done'' looks like. It's
+easy to be vague when using a human language like English or Korean;
+it's much harder to be vague in Python or R.
+
+TDD also reduces the risk of endless polishing, and also the risk of
+confirmation bias: someone who hasn't written a program is much more
+likely to be objective when testing it than its original author, and
+someone who hasn't written a program \emph{yet} is more likely to test
+it objectively than someone who has just put in several hours of hard
+work and really, really wants to be done.
+
+A similar ``backward'' method works very well for lesson design.  This
+method is something called \emph{reverse instructional design} or
+\emph{understanding by design} (after a book by Wiggins and McTighe
+with that name \cite{fixme}).  There are several variations, but the
+one we recommend has the following steps:
+
+\begin{enumerate}
+
+\item
+  Create user profiles to figure out who you are trying to teach, what
+  they care about, what they already know, and what special needs they
+  might have.
+
+\item
+  Draw concept maps to describe the mental model you want them to
+  construct.
+
+\item
+  Create a summative assessment, such as a final exam or performance,
+  that will show you whether learning has actually taken place.
+
+\item
+  Create formative assessments that will give the learners a chance to
+  practice the things they'll be asked to demonstrate in the summative
+  assessment, and tell you and them whether they're making progress
+  and where they need to focus their work.
+
+\item
+  Put the formative assessments in order based on their complexity and
+  dependencies.
+
+\item
+  Write short episodes to get learners from one formative assessment
+  to the next.  An actual classroom lesson will typically then consist
+  of three or four such episodes, each building toward a quick
+  check-in.
+
+\end{enumerate}
+
+This \emph{reverse instructional design} method helps keep teaching
+focused on its objectives. It also ensures that learners don't face
+anything on the final exam that the course hasn't prepared them for.
+
+\begin{callout}{How and Why to Fake It}{callout:how-and-why-to-fake-it}
+
+One of the most influential papers in the history of software
+engineering was Parnas and Clements'
+``\href{http://dx.doi.org/10.1109/TSE.1986.6312940}{A Rational Design
+Process: How and Why to Fake It}''
+(\href{http://www.ics.uci.edu/~taylor/classes/121/IEEE86\_Parnas\_Clement.pdf}{PDF}),
+in which they pointed out that in real life we move back and forth
+between gathering requirements, interface design, programming, and
+testing, but when we write up our work it's important to describe it as
+if we did these steps one after another so that other people can retrace
+our steps. The same is true of lesson design: while we may change our
+mind about what we want to teach based on something that occurs to us
+while we're writing an MCQ, we want the notes we leave behind to present
+things in the order described above.
+\end{callout}
+
+\begin{discussion}{Teaching to the Test}{discuss:teaching-to-the-test}
+
+Is reverse instructional design ``teaching to the test''? I.e., does it
+steer teachers toward getting their students to pass an exam rather than
+learn things?
+
+Reverse instructional design is \emph{not} the same thing as ``teaching
+to the test''. When using RID, teachers set goals to aid in lesson
+design, and may never actually give the final exam that they wrote. In
+many school systems, on the other hand, an external authority defines
+assessment criteria for all learners, regardless of their individual
+situations, and the outcomes of those summative assessments directly
+affect the teachers' pay and promotion. Green's
+\emph{\href{http://www.amazon.com/Building-Better-Teacher-Teaching-Everyone/dp/0393351084/}{Building
+a Better Teacher}} argues that this focus on measurement is appealing to
+those with the power to set the tests, but is unlikely to improve
+outcomes unless it is coupled with support for teachers to make
+improvements based on test outcomes. This is often missing, because as
+Scott pointed out in
+\emph{\href{http://www.amazon.com/Seeing-like-State-Certain-Condition/dp/0300078153/}{Seeing
+Like a State}}, large organizations usually value uniformity over
+productivity. \{: .solution\}
+\end{discussion}
 
 \seclbl{Writing Lessons}{sec:writing-lessons}
 
@@ -196,113 +315,6 @@ following steps to evaluate it and reword it to make it sharper.
   Share the original and your re-worded learning objectives in the Etherpad.
 \end{enumerate}
 \end{challenge}
-
-\seclbl{Reverse Instructional Design}{sec:reverse-instructional-design}
-
-Most people design courses as follows:
-
-\begin{enumerate}
-\item
-  The chair tells you that you have to teach something you haven't
-  thought about in ten years.
-\item
-  You start writing slides to explain what you know about the subject.
-\item
-  After two or three weeks, you make up an assignment based more or less
-  on what you've taught so far.
-\item
-  You repeat step 3 several times.
-\item
-  You stay up 'til the wee hours to make up a final exam.
-\end{enumerate}
-
-There's a better way, and to explain it, we first need to explain how
-\emph{\href{https://en.wikipedia.org/wiki/Test-driven\_development}{test-driven
-development}} (TDD) is used in software development. When programmers
-are using TDD, they don't write software and then (possibly) write
-tests. Instead, they write the tests first, then write just enough new
-software to make those tests pass, and then clean up a bit.
-
-TDD works because writing tests forces programmers to specify exactly
-what they're trying to accomplish and what ``done'' looks like. It's
-easy to be vague when using a human language like English or Korean;
-it's much harder to be vague in Python or R.
-
-TDD also reduces the risk of endless polishing, and increases the
-likelihood that tests will actually get written. (Somehow, people always
-seem to run out of time\ldots{}) Finally, writing the tests first
-reduces the risk of confirmation bias: someone who hasn't written a
-program is much more likely to be objective when testing it than its
-original author.
-
-A similar ``backward'' method works very well for lesson design. As
-described in Wiggins and McTighe's
-\emph{\href{http://www.amazon.com/Understanding-Design-Expanded-Grant-Wiggins/dp/0131950843/}{Understanding
-by Design}}, the method proceeds through four stages:
-
-\begin{enumerate}
-\item
-  Identify what is worth learning (e.g., draw concept maps).
-\item
-  Decide what constitutes evidence that learning has taken place (i.e.,
-  create the final exam or some other summative assessment).
-\item
-  Design practice work to prepare learners for what they will have to do
-  during the summative assessment. These should include formative
-  assessments to be done in class and the exercises to be done out of
-  class.
-\item
-  Sort those practices in order of increasing complexity and then write
-  short episodes to close the gap between what learners know and what
-  they need to know in order to do each one. (An actual classroom lesson
-  will then consist of several such episodes, each building toward a
-  quick formative assessment.)
-\end{enumerate}
-
-This \emph{reverse instructional design} method helps keep teaching
-focused on its objectives. It also ensures that learners don't face
-anything on the final exam that the course hasn't prepared them for.
-
-\begin{callout}{How and Why to Fake It}{callout:how-and-why-to-fake-it}
-
-One of the most influential papers in the history of software
-engineering was Parnas and Clements'
-``\href{http://dx.doi.org/10.1109/TSE.1986.6312940}{A Rational Design
-Process: How and Why to Fake It}''
-(\href{http://www.ics.uci.edu/~taylor/classes/121/IEEE86\_Parnas\_Clement.pdf}{PDF}),
-in which they pointed out that in real life we move back and forth
-between gathering requirements, interface design, programming, and
-testing, but when we write up our work it's important to describe it as
-if we did these steps one after another so that other people can retrace
-our steps. The same is true of lesson design: while we may change our
-mind about what we want to teach based on something that occurs to us
-while we're writing an MCQ, we want the notes we leave behind to present
-things in the order described above.
-\end{callout}
-
-\begin{discussion}{Teaching to the Test}{discuss:teaching-to-the-test}
-
-Is reverse instructional design ``teaching to the test''? I.e., does it
-steer teachers toward getting their students to pass an exam rather than
-learn things?
-
-Reverse instructional design is \emph{not} the same thing as ``teaching
-to the test''. When using RID, teachers set goals to aid in lesson
-design, and may never actually give the final exam that they wrote. In
-many school systems, on the other hand, an external authority defines
-assessment criteria for all learners, regardless of their individual
-situations, and the outcomes of those summative assessments directly
-affect the teachers' pay and promotion. Green's
-\emph{\href{http://www.amazon.com/Building-Better-Teacher-Teaching-Everyone/dp/0393351084/}{Building
-a Better Teacher}} argues that this focus on measurement is appealing to
-those with the power to set the tests, but is unlikely to improve
-outcomes unless it is coupled with support for teachers to make
-improvements based on test outcomes. This is often missing, because as
-Scott pointed out in
-\emph{\href{http://www.amazon.com/Seeing-like-State-Certain-Condition/dp/0300078153/}{Seeing
-Like a State}}, large organizations usually value uniformity over
-productivity. \{: .solution\}
-\end{discussion}
 
 \begin{callout}{The Minimal Manual}{callout:the-minimal-manual}
 
